pagina home feita

--- a/index.html
+++ b/index.html
@@ -5,10 +5,52 @@
     <link rel="icon" type="image/png" href="/path/to/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="/src/scripts/main.js"></script>
-    <title>Template SASS</title>
+    <title>Portfólio Dev</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <h3>teste</h3>
+    <main>
+      <section class="home">
+        <img src="/public/images/Avatar.svg" class="home-avatar" width: 680px;
+        />
+        <div class="home-intro">
+          <p class="home-intro-subtitle">
+            Hello World! Meu nome é <strong>Isabela Alves</strong> e sou
+          </p>
+          <h1 class="home-intro-title">Fullstack Developer</h1>
+          <p class="home-intro-description">
+            Transformo necessidades em aplicações reais, evolventes e
+            funcionais. Desenvolvo sistemas através da minha paixão pela
+            tecnologia, contribuindo com soluções inovadoras e eficazes para
+            desafios complexos.
+          </p>
+        </div>
+        <div class="home-skills">
+          <div class="tag">
+            <img src="/public/assets/git-hub.svg" class="tag-logo" />
+            <p class="tag-title">GitHub</p>
+          </div>
+          <div class="tag">
+            <img src="/public/assets/html.svg" class="tag-logo" />
+            <p class="tag-title">HTML</p>
+          </div>
+          <div class="tag">
+            <img src="/public/assets/css.svg" class="tag-logo" />
+            <p class="tag-title">CSS</p>
+          </div>
+          <div class="tag">
+            <img src="/public/assets/java-script.svg" class="tag-logo" />
+            <p class="tag-title">Javascript</p>
+          </div>
+          <div class="tag">
+            <img src="/public/assets/react.svg" class="tag-logo" />
+            <p class="tag-title">React</p>
+          </div>
+          <div class="tag">
+            <img src="/public/assets/node-js.svg" class="tag-logo" />
+            <p class="tag-title">Node.js</p>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
