--- a/index.html
+++ b/index.html
@@ -50,6 +50,155 @@
             <p class="tag-title">Node.js</p>
           </div>
         </div>
+        <img
+          class="caret-double-down"
+          src="/public/assets/caret-double-down.svg"
+        />
+      </section>
+
+      <section class="projects">
+        <div class="projects-intro">
+          <p class="projects-intro-subtitle">Meu trabalho</p>
+          <h2 class="projects-intro-title">Veja os projetos em destaque</h2>
+        </div>
+        <div class="projects-list">
+          <div class="card">
+            <img
+              class="card-img"
+              src="/public/images/thumbnail-project-01.png"
+              alt="#"
+            />
+            <div class="card-text">
+              <h3 class="card-text-title">Travelgram</h3>
+              <p class="card-text-description">
+                Rede social onde as pessoas mostram os registros de suas viagens
+                pelo mundo
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img
+              class="card-img"
+              src="/public/images/thumbnail-project-02.png"
+              alt="#"
+            />
+            <div class="card-text">
+              <h3 class="card-text-title">Tech News</h3>
+              <p class="card-text-description">
+                Homepage de um portal de notícias sobre a área de tecnologia
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img
+              class="card-img"
+              src="/public/images/thumbnail-project-03.png"
+              alt="#"
+            />
+            <div class="card-text">
+              <h3 class="card-text-title">Página de receita</h3>
+              <p class="card-text-description">
+                Página com o passo a passo de uma receita para cupcakes
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img
+              class="card-img"
+              src="/public/images/thumbnail-project-04.png"
+              alt="#"
+            />
+            <div class="card-text">
+              <h3 class="card-text-title">Zingen</h3>
+              <p class="card-text-description">
+                Landing Page completa e responsiva de um aplicativo de Karaokê
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img
+              class="card-img"
+              src="/public/images/thumbnail-project-05.png"
+              alt="#"
+            />
+            <div class="card-text">
+              <h3 class="card-text-title">Refund</h3>
+              <p class="card-text-description">
+                Um sistema para pedido e acompanhamento de reembolso
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img
+              class="card-img"
+              src="/public/images/thumbnail-project-06.png"
+              alt="#"
+            />
+            <div class="card-text">
+              <h3 class="card-text-title">Página de turismo</h3>
+              <p class="card-text-description">
+                Página com as principais informações para quem quer viajar para
+                Busan
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="services">
+        <div class="services-intro">
+          <p class="services-intro-subtitle">Meus serviços</p>
+          <h2 class="services-intro-title">Como posso ajudar o seu negócio</h2>
+        </div>
+        <div class="services-list">
+          <!-- DISPOSITIVOS-->
+          <div class="card-services">
+            <img
+              src="/public/assets/devices.svg"
+              alt="#"
+              class="card-services-img"
+            />
+            <div class="card-services-text">
+              <h3 class="card-services-text-title">Websites e Aplicativos</h3>
+              <p class="card-services-text-description">
+                Desenvolvimento de interfaces
+              </p>
+            </div>
+          </div>
+          <!-- API E BANCO DE DADOS -->
+          <div class="card-services">
+            <img
+              src="/public/assets/hard-drives.svg"
+              alt="#"
+              class="card-services-img"
+            />
+            <div class="card-services-text">
+              <h3 class="card-services-text-title">API e banco de dados</h3>
+              <p class="card-services-text-description">
+                Criação de serviços do sistema
+              </p>
+            </div>
+          </div>
+          <!-- DEVOPS -->
+          <div class="card-services">
+            <img
+              src="/public/assets/infinity.svg"
+              alt="#"
+              class="card-services-img"
+            />
+            <div class="card-services-text">
+              <h3 class="card-services-text-title">DevOps</h3>
+              <p class="card-services-text-description">
+                Gestão e infraestrutura da aplicação
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
