contact layout done

--- a/index.html
+++ b/index.html
@@ -200,6 +200,94 @@
           </div>
         </div>
       </section>
+
+      <section class="contact">
+        <div class="contact-intro">
+          <p class="contact-intro-subtitle">Contato</p>
+          <h2 class="contact-intro-title">Gostou do meu trabalho?</h2>
+          <p class="contact-intro-description">
+            Entre em contato ou acompanhe as minhas redes sociais!
+          </p>
+        </div>
+        <ul class="contact-list">
+          <!-- LINKEDIN -->
+          <li class="contact-list-item">
+            <div class="contact-list-item-logo">
+              <img
+                class="contact-list-item-logo-img"
+                src="/public/assets/linkedin-logo.svg"
+                alt="#"
+              />
+              <a class="contact-list-item-logo-title" href="#">Linkedin</a>
+            </div>
+
+            <a class="contact-list-item-link" href="#">
+              <img
+                class="contact-list-item-link-logo"
+                src="/public/assets/arrow-up-right.svg"
+                alt="#"
+              />
+            </a>
+          </li>
+          <!-- INSTAGRAM-->
+          <li class="contact-list-item">
+            <div class="contact-list-item-logo">
+              <img
+                class="contact-list-item-logo-img"
+                src="/public/assets/instagram-logo.svg"
+                alt="#"
+              />
+              <a class="contact-list-item-logo-title" href="#">Instagram</a>
+            </div>
+
+            <a class="contact-list-item-link" href="#">
+              <img
+                class="contact-list-item-link-logo"
+                src="/public/assets/arrow-up-right.svg"
+                alt="#"
+              />
+            </a>
+          </li>
+          <!-- GITHUB -->
+          <li class="contact-list-item">
+            <div class="contact-list-item-logo">
+              <img
+                class="contact-list-item-logo-img"
+                src="/public/assets/github-logo.svg"
+                alt="#"
+              />
+              <a class="contact-list-item-logo-title" href="#">GitHub</a>
+            </div>
+
+            <a class="contact-list-item-link" href="#">
+              <img
+                class="contact-list-item-link-logo"
+                src="/public/assets/arrow-up-right.svg"
+                alt="#"
+              />
+            </a>
+          </li>
+          <!-- E-MAIL -->
+          <li class="contact-list-item">
+            <div class="contact-list-item-logo">
+              <img
+                class="contact-list-item-logo-img"
+                src="/public/assets/envelope-simple.svg"
+                alt="#"
+              />
+              <a class="contact-list-item-logo-title" href="#">E-mail</a>
+            </div>
+
+            <a class="contact-list-item-link" href="#">
+              <img
+                class="contact-list-item-link-logo"
+                src="/public/assets/arrow-up-right.svg"
+                alt="#"
+              />
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
